<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_theme_color">

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/wantWithdraw"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/availableAmount"
        android:textColor="@color/haha_white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_available_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/haha_white"
        android:textSize="38sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/thisWithdraw"
        android:textColor="@color/haha_white"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_withdraw_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_button"
        android:gravity="center"
        android:hint="@string/enterWantWithdrawMoney"
        android:inputType="numberDecimal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textColor="@color/app_theme_color"
        android:textColorHint="@color/haha_gray_heavier"
        android:textSize="12sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/haha_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_alipay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_alipay_icon" />

                <TextView
                    android:id="@+id/tv_alipay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/iv_alipay"
                    android:text="@string/alipay"
                    android:textColor="@color/haha_black_light"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tv_alipay"
                    android:layout_below="@id/tv_alipay"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/alipayTips"
                    android:textColor="@color/haha_gray_heavy"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_cashout_chack_btn" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/haha_gray_light" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_wechatpay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_wechatpay_icon" />

                <TextView
                    android:id="@+id/tv_wechatpay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/iv_wechatpay"
                    android:text="@string/wechatpay"
                    android:textColor="@color/haha_gray_heavy"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tv_wechatpay"
                    android:layout_below="@id/tv_wechatpay"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/wechatpayTips"
                    android:textColor="@color/haha_gray_heavy"
                    android:textSize="12sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/haha_gray_light" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_cardpay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_cardpay_icon" />

                <TextView
                    android:id="@+id/tv_cardpay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/iv_cardpay"
                    android:text="@string/cardPay"
                    android:textColor="@color/haha_gray_heavy"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tv_cardpay"
                    android:layout_below="@id/tv_cardpay"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cardPayTips"
                    android:textColor="@color/haha_gray_heavy"
                    android:textSize="12sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_confirm_withdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_back_orange_sm"
                android:gravity="center"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/sureWithdraw"
                android:textColor="@color/haha_white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>