<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_theme_color"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_ap_coach_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="22dp"
            android:text="@string/coachSchedule"
            android:textColor="@color/haha_white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_ap_my_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mySchedule"
            android:textColor="@color/haha_white_light"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rly_no_coach"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/haha_white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">


        <ListView
            android:id="@+id/lv_loop_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/layer_list_divider_review"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"></ListView>

        <LinearLayout
            android:id="@+id/lly_select_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/haha_white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NotHavingCoachTips"
                android:textColor="@color/app_theme_color"
                android:textSize="22dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/FindCoachTips"
                android:textColor="@color/haha_gray_heavier"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_chose_coach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/corner_bg_orange_textview"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/choseCoach"
                android:textColor="@color/haha_white"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_above="@id/lly_select_area"
            android:background="@drawable/rect_gradient_white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lly_has_coach"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/fCBackgroundGray"
        android:gravity="center"
        android:orientation="vertical">
        <com.hahaxueche.ui.widget.pullToRefreshView.XListView
            android:id="@+id/xlv_schedule_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false">

        </com.hahaxueche.ui.widget.pullToRefreshView.XListView>

        <LinearLayout
            android:id="@+id/lly_no_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_ap_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_nolist_bk_pic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_ap_back"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/noScheduleTips"
                android:textColor="@color/fCTxtGrayFade"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/tab_bottom_gray_fade" />

    <LinearLayout
        android:id="@+id/lly_bottom_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lly_tab_index"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:focusable="false"
                android:src="@drawable/ic_bottombar_haha_normal_btn"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/index"
                android:textColor="@drawable/tab_text"
                android:textSize="10sp"></TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lly_tab_find_coach"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:focusable="false"
                android:src="@drawable/ic_bottombar_list_normal_btn"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/findCoach"
                android:textColor="@drawable/tab_text"
                android:textSize="10sp"></TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lly_tab_appointment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:focusable="false"
                android:src="@drawable/ic_bottombar_date_hold_btn"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/appointment"
                android:textColor="@color/app_theme_color"
                android:textSize="10sp"></TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lly_tab_my_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:focusable="false"
                android:src="@drawable/ic_bottombar_mypage_normal_btn"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/mySetting"
                android:textColor="@drawable/tab_text"
                android:textSize="10sp"></TextView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>