<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/haha_white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_base_confirm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_theme_color"
        android:padding="20dp"
        android:text="@string/sureWithdraw"
        android:textColor="@color/haha_white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_back_null"
        android:gravity="center_vertical"
        android:hint="@string/enterAlipayAccount"
        android:singleLine="true"
        android:textColor="@color/app_theme_color"
        android:textColorHint="@color/haha_gray_heavy"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/haha_gray_light" />

    <EditText
        android:id="@+id/et_account_owner_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_back_null"
        android:gravity="center_vertical"
        android:hint="@string/enterAlipayName"
        android:singleLine="true"
        android:textColor="@color/app_theme_color"
        android:textColorHint="@color/haha_gray_heavy"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/haha_gray_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="1.提现金额将于10个工作日内打入您的支付宝账户"
        android:textColor="@color/haha_gray_heavier"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="2.如果提现失败，请及时联系客服人员帮助"
        android:textColor="@color/haha_gray_heavier"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="客服联系电话：400-001-6006"
        android:textColor="@color/app_theme_color"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/haha_gray_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/cancel"
            android:textColor="@color/fCTxtOrange"
            android:textSize="14sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/fCViewGray" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/confirm"
            android:textColor="@color/fCTxtGreen"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>