<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/shareYourLinks"
        android:textColor="@color/haha_white"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/haha_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/shareLinksTips"
        android:textColor="@color/haha_white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_sms_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/rect_back_transparent"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:text="@string/smsShare"
        android:textColor="@color/haha_white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_copy_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rect_back_transparent"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:text="@string/copyLink"
        android:textColor="@color/haha_white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_share_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_coachmsg_sharecoach_qq" />

        <ImageView
            android:id="@+id/iv_share_weibo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_coachmsg_sharecoach_weibo" />

        <ImageView
            android:id="@+id/iv_share_weixin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_coachmsg_sharecoach_wechat" />

        <ImageView
            android:id="@+id/iv_share_friend_circle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_coachmsg_sharecoach_friendgroup" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_share_close_btn" />
</LinearLayout>